@@ -1,0 +1,39 @@
+########### GENERAL SECTION ################################
+BATCH_NAME= custom_hdrs  
+CLIENTS_NUM=10
+#CLIENTS_INITIAL_INC=50
+INTERFACE   =eth0    
+NETMASK=20  
+IP_ADDR_MIN= 192.168.1.1
+IP_ADDR_MAX= 192.168.5.255  #Actually - this is for self-control
+CYCLES_NUM= 100000
+CUSTOM_HTTP_HEADER="Curl-loader-1: The first custom header"
+CUSTOM_HTTP_HEADER="Curl-loader-2: The second custom header"
+
+########### LOGIN SECTION ##################################
+LOGIN=n
+#LOGIN_USERNAME=
+#LOGIN_PASSWORD=
+#LOGIN_REQ_TYPE=
+#LOGIN_POST_STR=
+#LOGIN_URL=
+#LOGIN_URL_MAX_TIME=
+#LOGIN_URL_INTERLEAVE_TIME=
+#LOGIN_CYCLING=
+
+########### UAS SECTION ####################################
+UAS=y
+UAS_URLS_NUM     = 1
+
+UAS_URL= http://localhost/apache2-default/index.html  #http://localhost/index.html
+UAS_URL_MAX_TIME = 3
+UAS_URL_INTERLEAVE_TIME = 1000
+
+########### LOGOFF SECTION #################################
+LOGOFF=n
+#LOGOFF_REQ_TYPE=
+#LOGOFF_POST_STR=
+#LOGOFF_URL=
+#LOGOFF_URL_MAX_TIME=
+#LOGOFF_URL_INTERLEAVE_TIME=
+#LOGOFF_CYCLING=
